created the image gallery for mobile view

--- a/src/styles/image-gallery.css
+++ b/src/styles/image-gallery.css
@@ -102,3 +102,32 @@
         height: 80px !important;
     }
 }
+
+@media (max-width:768px) {
+    .image-gallery-slides {
+        margin-bottom: 20px;
+        margin-left: 0;
+        height: 100% !important;
+        width: 100% !important;
+    }
+    .image-gallery-thumbnail {
+        border-width: 1px !important;
+        border-style: solid !important;
+        --tw-border-opacity: 1;
+        border-color: rgb(239 239 239/var(--tw-border-opacity)) !important;
+        width: 80px !important;
+        height: 100px !important;
+        z-index: 1 !important;
+        margin-bottom: 12px;
+        margin-right: 30px;
+    
+    }
+    .image-gallery-thumbnail.active {
+        border: 1px solid black !important;
+        width: 80px !important;
+        height: 100px !important;
+        z-index: 1 !important;
+    
+    }
+
+}
