--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,11 @@
   box-shadow: rgb(0 0 0 / 14%) 0px 15px 50px 0px;
 }
 
+/* =====> shadows */
+.filterShadow{
+  box-shadow: 0px 2px 16px -5px rgba(0,0,0,0.75);
+}
+
 /* ====> mui badge style */
 .MuiBadge-badge {
   background-color: #23232c !important;
@@ -26,13 +31,10 @@
   left: 0;
   bottom: 0;
 }
-.bottomLine:hover::after{
+.bottomLine:hover::after {
   width: 100%;
   background-color: black;
-
 }
 
-/* ====> filter drawer style */
-.filterDrawer{
-  width: 70%;
-}
+
+
