--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,5 +36,32 @@
   background-color: black;
 }
 
+.ThinScrollbar::-webkit-scrollbar {
+  width: 3px;
+  height: 1px;
+}
+.ThinScrollbar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #e1e1f4;
+  border-radius: 10px;
+}
+
+/* Handle */
+.ThinScrollbar::-webkit-scrollbar-thumb {
+  background: gray;
+  border-radius: 10px;
+  color: gray;
+}
+.HideScroll::-webkit-scrollbar {
+  width: 3px !important;
+  height: 0px !important;
+}
+.HideScroll::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #e1e1f4;
+  border-radius: 10px;
+}
+.HideScroll::-webkit-scrollbar-thumb {
+  background: gray;
+  color: gray;
+}
 
 
