--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,9 @@
 .filterShadow{
   box-shadow: 0px 2px 16px -5px rgba(0,0,0,0.75);
 }
+.Shadow {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
 
 /* ====> mui badge style */
 .MuiBadge-badge {
